--- a/app/views/partials/elements/ad-creator.html
+++ b/app/views/partials/elements/ad-creator.html
@@ -2,10 +2,10 @@
   <div>
     <br>
     <p><%= name %></p>
-    <input style="width:500px;" type="text" name="photo" placeholder="Imagen a <%= width %> x <%= height %> px" required>
+    <input style="width:500px;" type="text" name="photo" placeholder="Imagen a <%= width %> x <%= height %> px">
     <br>
-    <input style="width:500px;" type="text" name="description" placeholder="Descripción" required>
+    <input style="width:500px;" type="text" name="description" placeholder="Descripción">
     <br>
-    <input style="width:500px;" type="text" name="link" placeholder="link" required>
+    <input style="width:500px;" type="text" name="link" placeholder="link">
   </div>
 </script>
