--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -26,6 +26,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/report/general">General</a></li>
             <li><a href="/report/users/page-1">Usuarios</a></li>
+            <li><a href="/report/images/page-1">Imágenes</a></li>
             <li><a href="/report/works/page-1">Obras</a></li>
             <li><a href="/report/works/page-1">Colecciones</a></li>
             <li><a href="/report/products/page-1">Productos</a></li>
