--- a/app/styles/ads.styl
+++ b/app/styles/ads.styl
@@ -1,5 +1,34 @@
-.vertical-ad
-	width 160px
-	height 212px
-	border-radius 4px
+.ad-rect,
+.ad-quad
+.ad-horizontal
+	display block
+	margin-bottom 40px
+	img
+		border-radius 4px
+.ad-quad,
+.ad-horizontal
+	margin-bottom 20px
+			
+.ad
+	margin 0 auto
+	padding 15px 15px 5px 15px
+	border-radius 5px
+	margin-bottom 15px
 	border solid 1px #979797
+	a:first-child
+		img
+			margin-bottom 10px
+		p
+			font-family 'Arial'
+			font-size 12px
+			line-height 1.5
+			color #333333
+			
+	a:last-child
+		display block
+		margin-top 10px
+		font-family 'Arial'
+		font-size 12px
+		font-style italic
+		line-height 1.8
+		color #9b9b9b
