--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3144,9 +3144,21 @@ white = #fff
 	img
 		cursor zoom-in
 
+@media (max-width: 768px)
+	.single-info
+		display flex
+		flex-direction column
+		.single-image
+			order 1
+		.single-data
+			order 2
+		.ad
+			order 3
+			margin-bottom none
 @media (min-width: 768px)
 	.single-info
 		display flex
+		align-items flex-start
 		.single-image
 			flex 2
 			margin-right 10px
@@ -4034,8 +4046,18 @@ white = #fff
 /*------------------------------------*
 	$ FEED
 *------------------------------------*/
-.feed
+
+.feed-container
+	display flex
+	justify-content center
 	background #bac5c7
+
+.ads-feed
+	display flex
+	flex-direction column
+	margin-top 10px
+	
+.feed
 	padding 10px 20px 40px 20px
 	min-height 500px
 	.feed-title
