--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -51,54 +51,63 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="feed">
-		<div class="feed-title">
-			<div class="title">ART FEED</div>
-			<div class="u-separator" style="background: #eee;"></div>
-			<div class="user-info">
-				<div class="avatar">
-					<img src="{{user.photo}}">
-					<div class="info">
-						<p class="name uppercase">
-							{% if user.typeName === 1 %}
-								{{user.fullname}}
-							{% else %}
-								{{user.pseudonimo}}
-							{% endif %}
-						<p class="city u-margin-top-5">{{user.city}}, {{user.country}}</p>
+	
+	<div class="feed-container">
+		<div class="feed">
+			<div class="feed-title">
+				<div class="title">ART FEED</div>
+				<div class="u-separator" style="background: #eee;"></div>
+				<div class="user-info">
+					<div class="avatar">
+						<img src="{{user.photo}}">
+						<div class="info">
+							<p class="name uppercase">
+								{% if user.typeName === 1 %}
+									{{user.fullname}}
+								{% else %}
+									{{user.pseudonimo}}
+								{% endif %}
+							<p class="city u-margin-top-5">{{user.city}}, {{user.country}}</p>
+						</div>
+					</div>
+					<div class="stats">
+						<a href="/user/{{user.username}}/followers">
+							<div class="stat">
+								<p>{{numbers[0]}}</p>
+								<p class="u-margin-top-7">seguidores</p>
+							</div>
+						</a>
+						<a href="/user/{{user.username}}/">
+							<div class="stat">
+								<p>{{numbers[1]}}</p>
+								<p class="u-margin-top-7">obras</p>
+							</div>
+						</a>
+						<a href="/user/{{user.username}}/followings">
+							<div class="stat">
+								<p>{{numbers[2]}}</p>
+								<p class="u-margin-top-7">siguiendo</p>
+							</div>
+						</a>
 					</div>
 				</div>
-				<div class="stats">
-					<a href="/user/{{user.username}}/followers">
-						<div class="stat">
-							<p>{{numbers[0]}}</p>
-							<p class="u-margin-top-7">seguidores</p>
-						</div>
-					</a>
-					<a href="/user/{{user.username}}/">
-						<div class="stat">
-							<p>{{numbers[1]}}</p>
-							<p class="u-margin-top-7">obras</p>
-						</div>
-					</a>
-					<a href="/user/{{user.username}}/followings">
-						<div class="stat">
-							<p>{{numbers[2]}}</p>
-							<p class="u-margin-top-7">siguiendo</p>
-						</div>
-					</a>
-				</div>
 			</div>
-		</div>
-		<!-- <div class="feed-title" style="margin-top: 20px;">
-			<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
-		</div> -->
-		<div class="feed-inner">
-			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
-		</div>
+			<!-- <div class="feed-title" style="margin-top: 20px;">
+				<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
+			</div> -->
+			<div class="feed-inner">
+				<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			</div>
 
-		<div class="loader extra-small gray hide loading"></div>
+			<div class="loader extra-small gray hide loading"></div>
+		</div>
+		<div class="ads-feed">
+			{% for ad in ads %}				
+				<a class="ad-{{ad.AdType.name}}" href="{{ad.link}}" target="_blank">
+					<img src="{{ad.photo}}" alt="{{ad.description}}">
+				</a>
+			{% endfor %}
+		</div>
 	</div>
 
 	<div id="fb-root"></div>
@@ -108,6 +117,7 @@
 
 {% block scripts %}
 	<script>
+	// var ads = {{ads|json|safe}};
 	var actions = {{data|json|safe}};
 	(function (d, s, id) {
 		var js;
