--- a/app/views/partials/elements/table-brand-item.html
+++ b/app/views/partials/elements/table-brand-item.html
@@ -3,7 +3,7 @@
 	<td><%=id%></td>
 	<td><%=name%></td>
     <td><%=dateToString(createdAt)%></td>
-  	<td><a href="/report/brands/<%=id%>/ad-creator" class="btn featured-btn btn-primary">Crear anuncion</a></td>
-  	<td><a class="btn featured-btn btn-default">Editar</a></td>
+  	<td><a href="/report/brands/<%=id%>/ads" class="btn featured-btn btn-primary">Ver campañas</a></td>
+  	<td><a href="/report/brands/<%=id%>/ad-creator" class="btn featured-btn btn-success">Crear campaña</a></td>
   </tr>
 </script>
