ads and tv banners

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4055,10 +4055,10 @@ white = #fff
 .ads-feed
 	display flex
 	flex-direction column
-	margin-top 10px
+	margin-top 20px
 	
 .feed
-	padding 10px 20px 40px 20px
+	padding 20px 20px 40px 20px
 	min-height 500px
 	.feed-title
 		background white
@@ -4261,6 +4261,11 @@ white = #fff
 			display flex
 			justify-content center
 			padding 30px 20px
+
+@media (max-width: 900px)
+	.ads-feed
+		display none
+
 
 @media (min-width: 900px)
 	.feed
