--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -33,6 +33,12 @@
 	</div>
 </div>
 
+<div class="tv-banners">
+	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
+	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
+	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
+</div>
+
 <div class="latest-chapters">
 <h3>Últimos capítulos</h3>
 <div></div>
