--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -62,6 +62,7 @@
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
 			<div class="single-info">
+			{% if ad %}
 			<div class="ad" style="display:block;max-width:{{ad.AdType.width}}px;">
 				<a href="{{ad.link}}" target="_blank">
 					<img src="{{ad.photo}}" width="{{ad.AdType.width}}" height="{{ad.AdType.height}}" alt="{{ad.description}}">
@@ -69,6 +70,7 @@
 				</a>
 				<a href="/ads">ads via artemanifiesto</a>
 			</div>
+			{% endif %}
 
 				<div class="single-image">
 					<div class="single-image-inner" style="position: relative;">
