--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,3 +1,21 @@
+.tv-banners
+	display flex
+	max-width 1180px
+	margin 30px auto
+	align-items center
+	padding 0 10px
+	justify-content center
+	flex-wrap wrap
+	margin-top 25px
+	img
+		max-width 385px
+		margin-top 5px
+		margin-bottom 5px
+	
+	img:not(:first-child)
+		margin-left 5px
+	img:not(:last-child)
+		margin-right 5px
 .tv-intro
 	width 100%
 	height calc(100vh - 64px)
@@ -159,6 +177,16 @@
 				p:last-child
 					font-size 28px
 					
+@media (max-width: 900px)
+	.tv-banners
+		img
+			width 200px
+			
+@media (max-width: 400px)
+	.tv-banners
+		img
+			width 150px
+			
 @media (max-width: 768px)
 	.tv-intro
 		.info-container
