--- a/app/views/report/brand-ads.html
+++ b/app/views/report/brand-ads.html
@@ -22,10 +22,29 @@
           <td>{{adPack.endDate|date('d/m/y')}}</td>
           <td>{{adPack.AdPackType.name}}</td>
           <td>{{adPack.AdPackType.price}}</td>
-          <td><a href="/report/brands/<%=id%>/ad-creator/{{adPack.id}}/edit" class="btn featured-btn btn-success">Editar</a></td>
+          <td><a href="/report/brands/{{brand.id}}/ad-creator/{{adPack.id}}/activate" class="btn activate-btn btn-primary">{% if adPack.isActive %} desactivar {% else %} activar {% endif %}</a></td>
+          <td><a href="/report/brands/{{brand.id}}/ad-creator/{{adPack.id}}/edit" class="btn btn-success">Editar</a></td>
         </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
+{% endblock %}
+
+{% block scripts %}
+  <script>
+    $(function() {
+      $('.activate-btn').click(function(e) {
+        e.preventDefault();
+        var me = $(this);
+        $.post(me.attr('href')).then(function(response) {
+          if(response.data.adPack.isActive) {
+            me.text('desactivar');
+          }else {
+            me.text('activar');
+          }
+        });
+      });
+    }); 
+  </script>
 {% endblock %}
