--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -34,9 +34,9 @@
 </div>
 
 <div class="tv-banners">
-	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
-	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
-	<img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt="">
+	<a href="#"><img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt=""></a>
+	<a href="#"><img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt=""></a>
+	<a href="#"><img src="https://pbs.twimg.com/profile_images/838622288/CAT_logo_1__400x400.jpg" alt=""></a>
 </div>
 
 <div class="latest-chapters">
