--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -7,14 +7,16 @@
 	justify-content center
 	flex-wrap wrap
 	margin-top 25px
-	img
+	a
 		max-width 385px
 		margin-top 5px
 		margin-bottom 5px
+		img
+			width 100%
 	
-	img:not(:first-child)
+	a:not(:first-child)
 		margin-left 5px
-	img:not(:last-child)
+	a:not(:last-child)
 		margin-right 5px
 .tv-intro
 	width 100%
@@ -179,12 +181,12 @@
 					
 @media (max-width: 900px)
 	.tv-banners
-		img
+		a
 			width 200px
 			
 @media (max-width: 400px)
 	.tv-banners
-		img
+		a
 			width 150px
 			
 @media (max-width: 768px)
