--- a/app/views/partials/elements/table-brand-item.html
+++ b/app/views/partials/elements/table-brand-item.html
@@ -3,6 +3,7 @@
 	<td><%=id%></td>
 	<td><%=name%></td>
     <td><%=dateToString(createdAt)%></td>
+  	<td><a href="/report/brands/<%=id%>/edit" class="btn featured-btn btn-danger">Editar</a></td>
   	<td><a href="/report/brands/<%=id%>/ads" class="btn featured-btn btn-primary">Ver campañas</a></td>
   	<td><a href="/report/brands/<%=id%>/ad-creator" class="btn featured-btn btn-success">Crear campaña</a></td>
   </tr>
