--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -7,6 +7,12 @@
   <link href="/css/report/bootstrap.min.css" rel="stylesheet">
   <link href="/css/report/bootstrap-datepicker.min.css" rel="stylesheet">
   <link href="/css/report/dashboard.css" rel="stylesheet">
+
+  <style>
+    input {
+      border: 1px solid black !important;
+    }
+  </style>
 {% endblock %}
 
 {% block elements %}
