--- a/app/views/report/ad-creator.html
+++ b/app/views/report/ad-creator.html
@@ -25,7 +25,7 @@
     <div class="images-links">
     </div>
     <br>
-    <input type="submit" value="crear">
+    <input type="submit" value="{%if edit %} actualizar {%else%}crear {%endif%}">
   </form>
 {% endblock %}
 
