--- a/app/views/report/brands.html
+++ b/app/views/report/brands.html
@@ -6,7 +6,10 @@
 
 {% block content %}
 
-<h2 class="sub-header">Marcas <span class="total">({{data.pagination.total}})</span></h2>
+<h2 class="sub-header">Marcas <span class="total">({{data.pagination.total}})</span>
+<a href="/report/brands/add">Agregar marca</a>
+</h2>
+
 
 <div class="row">
   <div class="col-lg-2">
