--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -103,7 +103,7 @@
 		</div>
 		<div class="ads-feed">
 			{% for ad in ads %}				
-				<a class="ad-{{ad.AdType.name}}" href="{{ad.link}}" target="_blank">
+				<a data-id="{{ad.id}}" class="ad-{{ad.AdType.name}} ad-target" href="{{ad.link}}">
 					<img src="{{ad.photo}}" alt="{{ad.description}}">
 				</a>
 			{% endfor %}
