--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5864,3 +5864,43 @@ white = #fff
 		.button
 			max-width 170px
 			text-align center
+			
+
+
+
+/*------------------------------------*
+	Alert
+*------------------------------------*/
+
+.alert
+	padding 10px
+	display flex
+	text-align center
+	justify-content center
+	flex-wrap wrap
+	align-items center
+	font-family 'Montserrat', sans-serif
+	font-size 14px
+	.alert-btn
+		cursor pointer
+		font-family 'Montserrat', sans-serif
+		font-size 14px
+		border-radius 5px
+		padding 8px 16px
+		margin-left 10px
+		
+// .extra-content
+// 	position absolute
+// 	top 0
+// 	left 0
+// 	width 100%
+// 	background-color white
+// 	display none
+// 	iframe
+// 		z-index 3
+// 	.close
+// 		padding 20px
+// 		width 100%
+// 		height 30px
+// 		color white
+// 		background-color black
