--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,6 +1,6 @@
 {% set templates = ['collection-item', 'carrousel-item', 'review']%}
 {% set pageTitle = work.name %}
-
+{% set withoutHeader = lite %}
 {% extends '../../partials/base.html' %}
 
 {% block head %}
