change styles in alert

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5881,7 +5881,10 @@ white = #fff
 	align-items center
 	font-family 'Montserrat', sans-serif
 	font-size 14px
+	p
+		line-height 30px
 	.alert-btn
+		margin 10px
 		cursor pointer
 		font-family 'Montserrat', sans-serif
 		font-size 14px
