--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -68,7 +68,7 @@
 					<img src="{{ad.photo}}" width="{{ad.AdType.width}}" height="{{ad.AdType.height}}" alt="{{ad.description}}">
 					<p>{{ad.description}}</p>							
 				</a>
-				<a href="https://www.facebook.com/artemanifiesto">ads via artemanifiesto</a>
+				<a href="https://www.facebook.com/artemanifiesto" target="_blank">ads via artemanifiesto</a>
 			</div>
 			{% endif %}
 
