--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -7,6 +7,11 @@ body
 @import 'nib'
 
 /*------------------------------------*
+	$ AMLAB
+*------------------------------------*/
+@import 'amlab.styl'
+
+/*------------------------------------*
 	$ RESET
 *------------------------------------*/
 @import 'reset.styl'
