AM Lab Landing Links

--- a/app/styles/amlab.styl
+++ b/app/styles/amlab.styl
@@ -112,7 +112,7 @@
 					display none
 	&-map
 		width 100%
-		background-image url(http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516604/map_zwhxec.png)
+		background-image url(http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516604/map_2x_vafvpz.jpg)
 		background-repeat no-repeat
 		background-size cover
 		&-text 
