--- a/app/views/pages/lab.html
+++ b/app/views/pages/lab.html
@@ -6,58 +6,58 @@
 
 	<div class="amlab-wrapper">
 		<div class="amlab-banner">
-			<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516596/banner-principal_ilrnuk.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516639/banner-principal_2x_ywvx4y.png 2x">
+			<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516596/banner-principal_ilrnuk.jpg" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516639/banner-principal_2x_ywvx4y.jpg 2x">
 		</div>
 		<div class="amlab-container">
 			<div class="amlab-container-text">
 				<p class="amlab-container-text-title">SOMOS ARTE MANIFIESTO LAB</p>
 				<p class="amlab-container-text-parag">Somos un laboratorio de impresión profesional de alta fidelidad.<br>Especialistas en impresión de  ilustraciones, arte y fotografía</p>
-				<a class="amlab-button-hollow"href="#">NUESTROS SERVICIOS</a>
+				<a class="amlab-button-hollow" href="#amlab">NUESTROS SERVICIOS</a>
 			</div>
 		</div>
-		<div class="amlab-boxes">
+		<div id="amlab" class="amlab-boxes">
 			<div class="amlab-boxes-box">
-				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516577/image_oeyrqb.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516589/image_2x_jtoio4.png 2x">
+				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516577/image_oeyrqb.jpg" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516589/image_2x_jtoio4.jpg 2x">
 			</div>
 			<div class="amlab-boxes-box">
 				<div class="amlab-boxes-box-text">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516605/Shape_2x_c3ydby.png 2x">
+					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516605/Shape_2x_c3ydby.png 2x">
 					<p class="amlab-boxes-box-text-title">PHOTO PRINT</p>
 					<p class="amlab-boxes-box-text-subtitle">Fotografía de gran formato</p>
 					<p class="amlab-boxes-box-text-parag">Servicio de impresión para fotógrafos profesionales y entusiastas que te permiten materializar tus fotografías digitales. En papel luster y algodón 300 gsm.</p>
-					<a class="amlab-button" href="#">COTIZAR PRECIO</a>
+					<a class="amlab-button" href="http://m.me/artemanifiestolab">COTIZAR PRECIO</a>
 				</div>
 			</div>
 			<div class="amlab-boxes-box">
 				<div class="amlab-boxes-box-text">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516605/Shape_2x_c3ydby.png 2x">
+					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516605/Shape_2x_c3ydby.png 2x">
 					<p class="amlab-boxes-box-text-title">ART PRINT</p>
 					<p class="amlab-boxes-box-text-subtitle">Impresión Giclee para arte</p>
 					<p class="amlab-boxes-box-text-parag">Hacemos reproducciones de alta calidad mediante el grabado digital giclée. Si eres ilustrador digital, puedes hacer reales tus creaciones para tí o tus clientes.<br>Disponible en papel texturado acuarela, papel algodón y lienzo.</p>
-					<a class="amlab-button" href="#">CONOCER MÁS</a>
+					<a class="amlab-button" href="http://m.me/artemanifiestolab">CONOCER MÁS</a>
 				</div>
 			</div>
 			<div class="amlab-boxes-box">
-				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516600/image_3_mflw6c.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516636/image_3_2x_ucvntq.png 2x">
+				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516600/image_3_mflw6c.jpg" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516636/image_3_2x_ucvntq.jpg 2x">
 			</div>
 			<div class="amlab-boxes-box">
-				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516590/image_2_ydtywv.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516616/image_2_2x_vbkx9j.png 2x">
+				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516590/image_2_ydtywv.jpg" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516616/image_2_2x_vbkx9j.jpg 2x">
 			</div>
 			<div class="amlab-boxes-box">
 				<div class="amlab-boxes-box-text">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516605/Shape_2x_c3ydby.png 2x">
+					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516604/Shape_fgyj3e.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516605/Shape_2x_c3ydby.png 2x">
 					<p class="amlab-boxes-box-text-title">ART MERCH</p>
 					<p class="amlab-boxes-box-text-subtitle">Arte sublimado</p>
 					<p class="amlab-boxes-box-text-parag">Fabricamos productos con fidelidad total al color, para poner tu arte o tus fotografías en objetos del día a día. Para tus clientes o para un detalle especial.<br>Disponible para Carcasas, Tazas y libretas.</p>
-					<a class="amlab-button" href="#">QUIERO HACER UNO</a>
+					<a class="amlab-button" href="http://m.me/artemanifiestolab">QUIERO HACER UNO</a>
 				</div>
 			</div>
 		</div>
 		<div class="amlab-map">
 			<div class="amlab-map-text">
 				<p>Contáctanos:<br>amlab@artemanifiesto.com<br>Av. Pedro Venturo 425, Surco,<br>Lima-Perú</p>
-				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516572/Icon_ypgrqa.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/v1475516572/Icon_2x_vdkvvz.png 2x">
-				<a class="amlab-button-dark" href="#">AGENDAR UNA CITA</a>
+				<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516572/Icon_ypgrqa.png" srcset="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516572/Icon_2x_vdkvvz.png 2x">
+				<a class="amlab-button-dark" href="http://m.me/artemanifiestolab">AGENDAR UNA CITA</a>
 			</div>
 		</div>
 	</div>
