discover banner update

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -2,7 +2,7 @@
 {% set pageTitle = 'Descubre Artistas' %}
 {% set path = 'users' %}
 {% set bannerTitle = 'Descubre nuevos artistas y creadores' %}
-{% set bannerImg = 'discover-banner-artists.jpg' %}
+{% set bannerImg = 'banner-descubre-artistas-y-creadores.jpg' %}
 
 {% extends '../partials/base.html' %}
 
