--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -2,7 +2,7 @@
 {% set path = 'works' %}
 {% set pageTitle = 'Descubre Obras' %}
 {% set bannerTitle = 'Descubre obras y creaciones' %}
-{% set bannerImg = 'discover-banner-works.jpg' %}
+{% set bannerImg = 'banner-descubre-obras-y-creaciones.jpg' %}
 
 {% extends '../partials/base.html' %}
 
