--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -91,9 +91,34 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 	</style>
 	{% if env === "production" %}
 	<!-- Start of artemanifiesto Zendesk Widget script -->
-<script>/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","artemanifiesto.zendesk.com");
-/*]]>*/</script>
+<!-- <script>/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","artemanifiesto.zendesk.com");
+/*]]>*/</script> -->
 <!-- End of artemanifiesto Zendesk Widget script -->
+
+<!-- Start of Async Drift Code -->
+<script>
+!function() {
+ var t;
+ if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
+ t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+ t.factory = function(e) {
+   return function() {
+     var n;
+     return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
+   };
+ }, t.methods.forEach(function(e) {
+   t[e] = t.factory(e);
+ }), t.load = function(t) {
+   var e, n, o, i;
+   e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
+   o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
+   n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
+ });
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('dybbbnh3wb9u');
+</script>
+<!-- End of Async Drift Code -->
 	{% endif %}
 </head>
 <body>
