home redirection update

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5896,7 +5896,21 @@ white = #fff
 		border-radius 5px
 		padding 8px 16px
 		margin-left 10px
-		
+
+.am-Profile-menu-item:hover
+	background #fff
+	border-bottom solid 1px #b8b8b8
+	border-left solid 1px #b8b8b8
+	border-right solid 1px #b8b8b8
+	box-sizing border-box
+	
+.selected:hover
+	background #fff
+	border-bottom solid 2px #4000ff
+	border-left solid 1px #b8b8b8
+	border-right solid 1px #b8b8b8
+	box-sizing inherit
+
 // .extra-content
 // 	position absolute
 // 	top 0
