Profile hover effect

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1858,6 +1858,18 @@ white = #fff
 			border-bottom solid 2px #4000ff
 			border-left solid 1px #b8b8b8
 			border-right solid 1px #b8b8b8
+		&.selected:hover
+			background white
+			border-bottom solid 2px #4000ff
+			border-left solid 1px #b8b8b8
+			border-right solid 1px #b8b8b8
+			box-sizing inherit
+	&-item:hover
+		background #fff
+		border-bottom solid 1px #b8b8b8
+		border-left solid 1px #b8b8b8
+		border-right solid 1px #b8b8b8
+		box-sizing border-box
 
 
 
@@ -5896,20 +5908,6 @@ white = #fff
 		border-radius 5px
 		padding 8px 16px
 		margin-left 10px
-
-.am-Profile-menu-item:hover
-	background #fff
-	border-bottom solid 1px #b8b8b8
-	border-left solid 1px #b8b8b8
-	border-right solid 1px #b8b8b8
-	box-sizing border-box
-	
-.selected:hover
-	background #fff
-	border-bottom solid 2px #4000ff
-	border-left solid 1px #b8b8b8
-	border-right solid 1px #b8b8b8
-	box-sizing inherit
 
 // .extra-content
 // 	position absolute
