--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -12,6 +12,11 @@ body
 @import 'amlab.styl'
 
 /*------------------------------------*
+	$ SINGLE REDONE
+*------------------------------------*/
+@import 'single.styl'
+
+/*------------------------------------*
 	$ RESET
 *------------------------------------*/
 @import 'reset.styl'
