--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -69,6 +69,10 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="/css/budicon.css">
+	
+	<link rel="stylesheet" href="/css/DIN.css">
+
+	<link rel="stylesheet" href="/css/OpenSans.css">
 
 	<link rel="stylesheet" type="text/css" href="/app.min.css">
 	{% block styles %} {% endblock %}
